--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 						<div class="nav-item dropdown">
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Yoga Retreats</a>
 							<div class="dropdown-menu m-0">
-								<a href="#" class="dropdown-item">3 days yoga retreat in Rishikesh</a>
-								<a href="#" class="dropdown-item">6 days yoga retreat in Dehradun</a>
-								<a href="#" class="dropdown-item">9 days yoga retreat in Haridhwar</a>
+								<a href="yoga-retreats-1.html" class="dropdown-item">3 days yoga retreats</a>
+								<a href="yoga-retreats-2.html" class="dropdown-item">4 days yoga retreats</a>
+								<a href="yoga-retreats-3.html" class="dropdown-item">6 days yoga retreats</a>
 							</div>
 						</div>
 						<div class="nav-item dropdown">
@@ -101,7 +101,7 @@
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
 					</div>
 					<!-- Register Now Button -->
-					<a href="register.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
+					<a href="register.html" class="btn hover-fill btn-white theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
 				</div>
 			</nav>
 		</header>
@@ -291,6 +291,7 @@
         <div class="row g-0">
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
                 <div class="bg-light rounded">
+                    <img src="images/retreat-2.jpg" alt="Temple Visit" class="img-fluid rounded-top">
                     <div class="border-bottom py-4 px-5 mb-4">
                         <h4 class="text-theme mb-1">Temple Visit</h4>
                         <small class="text-uppercase">Explore Sacred Sites</small>
@@ -302,7 +303,7 @@
                         </h1>
                         <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
                         <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Temple Visit, Hiking</span></div>
-						<div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
                         <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
                         <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
                     </div>
@@ -310,6 +311,7 @@
             </div>
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
                 <div class="bg-white rounded shadow position-relative" style="z-index: 1;">
+                    <img src="images/retreat-3.jpeg" alt="Yoga Sessions" class="img-fluid rounded-top">
                     <div class="border-bottom py-4 px-5 mb-4">
                         <h4 class="text-theme mb-1">Yoga Sessions</h4>
                         <small class="text-uppercase">Guided Daily Practices</small>
@@ -322,13 +324,14 @@
                         <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
                         <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Daily Yoga Sessions, Temple Visit, <br>Hiking Camping, Nature Walk</span></div>
                         <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
-						<div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
                         <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
                 <div class="bg-light rounded">
+                    <img src="images/retreat-1.jpg" alt="Hiking & Camping" class="img-fluid rounded-top">
                     <div class="border-bottom py-4 px-5 mb-4">
                         <h4 class="text-theme mb-1">Hiking & Camping</h4>
                         <small class="text-uppercase">Outdoor Adventures</small>
@@ -340,7 +343,7 @@
                         </h1>
                         <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
                         <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Yoga Sessions, Camping</span></div>
-						<div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
                         <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
                         <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
                     </div>
@@ -349,6 +352,7 @@
         </div>
     </div>
 </div>
+
 
 
 
