--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
 					</div>
 					<!-- Register Now Button -->
-					<a href="register.html" class="btn hover-fill btn-white theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
+					<a href="register.html" class="btn hover-fill btn-theme theme-design py-md-3 px-md-5 ms-auto">Register Now</a>
 				</div>
 			</nav>
 		</header>
@@ -281,82 +281,82 @@
 			</div>
 		</div>
 
-<!-- Plan Section -->
-<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-    <div class="container py-5">
-        <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-theme text-uppercase">Himalayas Yoga Retreat</h5>
-            <h1 class="mb-0">We are Offering Various Retreat Options</h1>
-        </div>
-        <div class="row g-0">
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.6s">
-                <div class="bg-light rounded">
-                    <img src="images/retreat-2.jpg" alt="Temple Visit" class="img-fluid rounded-top">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-theme mb-1">Temple Visit</h4>
-                        <small class="text-uppercase">Explore Sacred Sites</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>299<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Temple Visit, Hiking</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
-                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="bg-white rounded shadow position-relative" style="z-index: 1;">
-                    <img src="images/retreat-3.jpeg" alt="Yoga Sessions" class="img-fluid rounded-top">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-theme mb-1">Yoga Sessions</h4>
-                        <small class="text-uppercase">Guided Daily Practices</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>399<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Daily Yoga Sessions, Temple Visit, <br>Hiking Camping, Nature Walk</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
-                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 wow slideInUp" data-wow-delay="0.9s">
-                <div class="bg-light rounded">
-                    <img src="images/retreat-1.jpg" alt="Hiking & Camping" class="img-fluid rounded-top">
-                    <div class="border-bottom py-4 px-5 mb-4">
-                        <h4 class="text-theme mb-1">Hiking & Camping</h4>
-                        <small class="text-uppercase">Outdoor Adventures</small>
-                    </div>
-                    <div class="p-5 pt-0">
-                        <h1 class="display-5 mb-3">
-                            <small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>499<small
-                                class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
-                        </h1>
-                        <div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Yoga Sessions, Camping</span></div>
-                        <div class="d-flex justify-content-between mb-3"><span>Offerings:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
-                        <div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
-                        <a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+		<!-- Plan Section -->
+		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+			<div class="container py-5">
+				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
+					<h5 class="fw-bold text-theme text-uppercase">Himalayas Yoga Retreat</h5>
+					<h1 class="mb-0">We are Offering Various Retreat Options</h1>
+				</div>
+				<div class="row">
+					<!-- First Retreat Option -->
+					<div class="col-lg-4 wow slideInUp mb-4" data-wow-delay="0.6s">
+						<div class="bg-light theme-design-high position-relative">
+							<img src="images/retreat-2.jpg" alt="Temple Visit" class="img-fluid rounded-top position-relative">
+							<!-- Title and Subtitle positioned at the bottom left of the image -->
+							<div class="position-absolute top-0 end-0 bg-theme text-white p-2" style="min-width: 100px;">
+								<h5 class="mb-0">Temple Visit</h5>
+							</div>
+							<div class="p-5 pt-0">
+								<h1 class="display-5 mb-3 mt-3">
+									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>299<small
+										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+								</h1>
+								<div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Temple Visit, Hiking</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Benefits:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+								<div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+								<a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+							</div>
+						</div>
+					</div>
 
+					<!-- Second Retreat Option -->
+					<div class="col-lg-4 wow slideInUp mb-4" data-wow-delay="0.3s">
+						<div class="bg-white theme-design-high shadow position-relative" style="z-index: 1;">
+							<img src="images/retreat-3.jpeg" alt="Yoga Sessions" class="img-fluid rounded-top position-relative">
+							<!-- Title and Subtitle positioned at the bottom left of the image -->
+							<div class="position-absolute top-0 end-0 bg-theme text-white p-2" style="min-width: 100px;">
+								<h5 class="mb-0">Yoga Sessions</h5>
+							</div>
+							<div class="p-5 pt-0">
+								<h1 class="display-5 mb-3 mt-3">
+									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>399<small
+										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+								</h1>
+								<div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Daily Yoga Sessions, Temple Visit, <br>Hiking Camping, Nature Walk</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Benefits:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+								<div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+								<a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+							</div>
+						</div>
+					</div>
 
-
-
-
+					<!-- Third Retreat Option -->
+					<div class="col-lg-4 wow slideInUp mb-4" data-wow-delay="0.9s">
+						<div class="bg-light theme-design-high position-relative">
+							<img src="images/retreat-1.jpg" alt="Hiking & Camping" class="img-fluid rounded-top position-relative">
+							<!-- Title and Subtitle positioned at the bottom left of the image -->
+							<div class="position-absolute top-0 end-0 bg-theme text-white p-2" style="min-width: 100px;">
+								<h5 class="mb-0">Hiking & Camping</h5>
+							</div>
+							<div class="p-5 pt-0">
+								<h1 class="display-5 mb-3 mt-3">
+									<small class="align-top" style="font-size: 22px; line-height: 45px;">$</small>499<small
+										class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Shared</small>
+								</h1>
+								<div class="d-flex justify-content-between mb-3"><span>Accommodation:</span><span>Twin Shared / Private</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Activities:</span><span>Yoga Sessions, Camping</span></div>
+								<div class="d-flex justify-content-between mb-3"><span>Benefits:</span><span>Daily 3 Times Meals & Tea<br>Airport Pickup & Drop Off</span></div>
+								<div class="d-flex justify-content-between mb-2"><span>Duration:</span><span>5 Days, 4 Nights Retreat</span></div>
+								<a href="#" class="btn hover-fill btn-theme py-2 px-4 mt-4">Contact Us</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 		<!-- Gallery Section -->
 		<div class="container-fluid py-5 mb-5 py-5 gallery wow fadeInUp" data-wow-delay="0.1s">
@@ -463,7 +463,7 @@
 					<div class="col-lg-4 slideInUp" data-wow-delay="0.3s">
 						<div class="team-item bg-light theme-design-high overflow-hidden">
 							<div class="team-img hover-zoom position-relative overflow-hidden">
-								<img class="img-fluid w-100" src="images/team-(1).jpg" alt="">
+								<img class="img-fluid w-100" src="images/team-1.jpg" alt="">
 							</div>
 							<div class="text-center py-4">
 								<h4 class="text-theme">Full Name</h4>
