--- a/yoga-retreats-1.html
+++ b/yoga-retreats-1.html
@@ -129,7 +129,7 @@
                             <h4 class="nav-title mb-3">3 Days Yoga Retreat</h4>
                             <hr class="custom-underline">
                             <!-- Left Side Navigation Menu -->
-                            <ul class="nav-list list-unstyled link-animated">
+                            <ul class="nav-list list-unstyled">
                                 <li><a href="#overview"><i class="fas fa-info-circle"></i> Overview</a></li> <!-- Info icon for overview -->
                                 <li><a href="#fee-detail"><i class="fas fa-dollar-sign"></i> Fee Detail</a></li> <!-- Dollar sign for fee detail -->
                                 <li><a href="#eligibility"><i class="fas fa-user-check"></i> Eligibility</a></li> <!-- User check icon for eligibility -->
