--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
 			<div class="container about-section">
 				<div class="row align-items-center">
-					<div class="col-lg-6">
+					<div class="col-lg-6 mb-5">
 						<div class="about-image-wrapper position-relative">
 							<div class="background-shape theme-design"></div>
 							<div class="about-image theme-design">
@@ -162,7 +162,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-6">
+					<div class="col-lg-6 mb-5">
 						<div class="about-content">
 							<h2 class="mb-4">Himalayan Yoga Retreat</h2>
 							<p class="mb-4">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.</p>
