--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 					<div class="col-lg-6 mb-5">
 						<div class="about-content">
 							<h2 class="mb-4">Himalayan Yoga Retreat</h2>
-							<p class="mb-4">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.</p>
-							<p class="mb-4">Nestled along the sacred banks of the Ganges River, our retreat is set amidst the serene beauty and spiritual energy of the Himalayas. This peaceful environment provides the perfect backdrop for awakening your inner strength and achieving personal growth. Join us at Himalayan Yoga Retreat and begin your journey towards inner peace and holistic well-being.</p>
+							<p class="mb-4 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.</p>
+							<p class="mb-4 text-justify">Nestled along the sacred banks of the Ganges River, our retreat is set amidst the serene beauty and spiritual energy of the Himalayas. This peaceful environment provides the perfect backdrop for awakening your inner strength and achieving personal growth. Join us at Himalayan Yoga Retreat and begin your journey towards inner peace and holistic well-being.</p>
 							<a href="#" class="btn hover-fill btn-theme theme-design py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Read More</a>
 						</div>
 					</div>
@@ -358,77 +358,75 @@
 			</div>
 		</div>
 
-
-
 		<!-- Testimonial Section -->
-<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="position: relative; background-image: url('images/testimonial-banner.jpg'); background-size: cover; background-position: center; min-height: 700px;">
-    <div class="container py-5">
-        <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.6s">
-            <div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
-                <div class="d-flex align-items-center mb-4">
-                    <img class="img-fluid rounded-circle me-3" src="images/testimonial-1.jpg" style="width: 60px; height: 60px;">
-                    <div>
-                        <h4 class="text-dark mb-1">Soumya Sharma</h4>
-                        <!-- <small class="text-uppercase">Software Engineer</small> -->
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <p class="mb-4">"I had an incredible experience at the Himalayan Yoga Retreat in Rishikesh. The serene environment along the Ganges River, combined with the wisdom of the experienced instructors, allowed me to truly deepen my yoga practice. Each day felt like a step closer to inner peace as I learned new meditation techniques and participated in powerful asana sessions. I returned home feeling rejuvenated, mentally clear, and spiritually enriched. I highly recommend this retreat to anyone looking for a transformative yoga experience."</p>
-					<div class="d-flex justify-content-start align-items-center">
-						<img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                    </div>
-				</div>
-            </div>
-            <!-- Repeat similar structure for other testimonial items -->
-			<div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
-                <div class="d-flex align-items-center mb-4">
-                    <img class="img-fluid rounded-circle me-3" src="images/testimonial-2.jpg" style="width: 60px; height: 60px;">
-                    <div>
-                        <h4 class="text-dark mb-1">Priya Rai</h4>
-                        <!-- <small class="text-uppercase">Software Engineer</small> -->
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <p class="mb-4">"The Himalayan Yoga Retreat was everything I hoped for and more. The peaceful setting in the Himalayas was the perfect place to disconnect from the noise of everyday life and reconnect with myself. I gained so much from the guided sessions on pranayama and yoga Nidra, and the instructors were incredibly supportive. I left feeling more balanced, both physically and emotionally, and with a newfound sense of inner calm that I am excited to carry forward."</p>
-					<div class="d-flex justify-content-start align-items-center">
-                        <img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
-						<i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                    </div>
-				</div>
-            </div>
+		<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="position: relative; background-image: url('images/testimonial-banner.jpg'); background-size: cover; background-position: center; min-height: 700px;">
+			<div class="container py-5">
+				<div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.6s">
+					<div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
+						<div class="d-flex align-items-center mb-4">
+							<img class="img-fluid rounded-circle me-3" src="images/testimonial-1.jpg" style="width: 60px; height: 60px;">
+							<div>
+								<h4 class="text-dark mb-1">Soumya Sharma</h4>
+								<!-- <small class="text-uppercase">Software Engineer</small> -->
+							</div>
+						</div>
+						<div class="testimonial-content">
+							<p class="mb-4 text-justify">"I had an incredible experience at the Himalayan Yoga Retreat in Rishikesh. The serene environment along the Ganges River, combined with the wisdom of the experienced instructors, allowed me to truly deepen my yoga practice. Each day felt like a step closer to inner peace as I learned new meditation techniques and participated in powerful asana sessions. I returned home feeling rejuvenated, mentally clear, and spiritually enriched. I highly recommend this retreat to anyone looking for a transformative yoga experience."</p>
+							<div class="d-flex justify-content-start align-items-center">
+								<img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+							</div>
+						</div>
+					</div>
+					<!-- Repeat similar structure for other testimonial items -->
+					<div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
+						<div class="d-flex align-items-center mb-4">
+							<img class="img-fluid rounded-circle me-3" src="images/testimonial-2.jpg" style="width: 60px; height: 60px;">
+							<div>
+								<h4 class="text-dark mb-1">Priya Rai</h4>
+								<!-- <small class="text-uppercase">Software Engineer</small> -->
+							</div>
+						</div>
+						<div class="testimonial-content">
+							<p class="mb-4">"The Himalayan Yoga Retreat was everything I hoped for and more. The peaceful setting in the Himalayas was the perfect place to disconnect from the noise of everyday life and reconnect with myself. I gained so much from the guided sessions on pranayama and yoga Nidra, and the instructors were incredibly supportive. I left feeling more balanced, both physically and emotionally, and with a newfound sense of inner calm that I am excited to carry forward."</p>
+							<div class="d-flex justify-content-start align-items-center">
+								<img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+							</div>
+						</div>
+					</div>
 
-			<div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
-                <div class="d-flex align-items-center mb-4">
-                    <img class="img-fluid rounded-circle me-3" src="images/testimonial-3.jpg" style="width: 60px; height: 60px;">
-                    <div>
-                        <h4 class="text-dark mb-1">Anushka Aswal</h4>
-                        <!-- <small class="text-uppercase">Software Engineer</small> -->
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <p class="mb-4">"Attending the Himalayan Yoga Retreat was a life-changing experience. From the moment I arrived, I felt embraced by the calming energy of the mountains and the sacred Ganges River. The daily yoga practices, combined with the meditation sessions, helped me achieve a deeper level of self-awareness and relaxation. The retreat provided a perfect blend of challenge and nurturing, which helped me unlock new levels of strength and tranquility. I can’t wait to return next year!"</p>
-					<div class="d-flex justify-content-start align-items-center">
-                        <img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
-						<i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                    </div>
+					<div class="testimonial-item bg-light theme-design-high d-flex flex-column justify-content-center align-items-center position-relative p-4">
+						<div class="d-flex align-items-center mb-4">
+							<img class="img-fluid rounded-circle me-3" src="images/testimonial-3.jpg" style="width: 60px; height: 60px;">
+							<div>
+								<h4 class="text-dark mb-1">Anushka Aswal</h4>
+								<!-- <small class="text-uppercase">Software Engineer</small> -->
+							</div>
+						</div>
+						<div class="testimonial-content">
+							<p class="mb-4">"Attending the Himalayan Yoga Retreat was a life-changing experience. From the moment I arrived, I felt embraced by the calming energy of the mountains and the sacred Ganges River. The daily yoga practices, combined with the meditation sessions, helped me achieve a deeper level of self-awareness and relaxation. The retreat provided a perfect blend of challenge and nurturing, which helped me unlock new levels of strength and tranquility. I can’t wait to return next year!"</p>
+							<div class="d-flex justify-content-start align-items-center">
+								<img class="img-fluid ms-3 me-2" src="images/google.png" alt="Google Logo" style="width: 30px; height: auto;">
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+								<i class="fas fa-star text-warning"></i>
+							</div>
+						</div>
+					</div>
 				</div>
-            </div>
-        </div>
-    </div>
-</div>
+			</div>
+		</div>
 
 
 		<!-- Team Section -->
