--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				</div>
 				<div class="row g-5 align-items-center position-relative">
 					<div class="col-lg-4">
-						<div class="feature-item d-flex justify-content-end align-items-center mb-5 wow slideInLeft" data-wow-delay="0.1s">
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5">
 							<div class="content text-right me-3">
 								<h5>Authentic Himalayan Experience</h5>
 								<p>Discover the true essence of yoga in the serene landscapes of the Himalayas.</p>
@@ -199,7 +199,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feature-item d-flex justify-content-end align-items-center mb-5 wow slideInLeft" data-wow-delay="0.2s" style="margin-right: 50px;">
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 50px;">
 							<div class="content text-right me-3">
 								<h5>Comprehensive Packages</h5>
 								<p>Enjoy all-inclusive retreats with yoga, meditation, meals, and accommodation.</p>
@@ -210,7 +210,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feature-item d-flex justify-content-end align-items-center mb-5 wow slideInLeft" data-wow-delay="0.3s" style="margin-right: 40px;">
+						<div class="feature-item d-flex justify-content-end align-items-center mb-5" style="margin-right: 40px;">
 							<div class="content text-right me-3">
 								<h5>Experienced Guidance</h5>
 								<p>Learn from seasoned yoga teachers dedicated to guiding your spiritual journey and inner peace.</p>
@@ -221,7 +221,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="feature-item d-flex justify-content-end align-items-center wow slideInLeft" data-wow-delay="0.4s">
+						<div class="feature-item d-flex justify-content-end align-items-center">
 							<div class="content text-right me-3">
 								<h5>Variety of Activities</h5>
 								<p>Balance your yoga practice with adventurous activities like hiking, temple visits, and more.</p>
@@ -237,7 +237,7 @@
 						<img src="images/feature.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
 					</div>
 					<div class="col-lg-4">
-						<div class="feature-item d-flex align-items-center mb-5 wow slideInRight" data-wow-delay="0.1s">
+						<div class="feature-item d-flex align-items-center mb-5">
 							<div class="feature-icon hover-zoom">
 								<div class="circle-icon">
 									<i class="fas fas fa-spa"></i>
@@ -248,7 +248,7 @@
 								<p>Choose from private or shared retreats and various durations to fit your preferences.</p>
 							</div>
 						</div>
-						<div class="feature-item d-flex align-items-center mb-5 wow slideInRight" data-wow-delay="0.2s" style="margin-left: 50px;">
+						<div class="feature-item d-flex align-items-center mb-5" style="margin-left: 50px;">
 							<div class="feature-icon hover-zoom">
 								<div class="circle-icon">
 									<i class="fas fas fa-spa"></i>
@@ -259,7 +259,7 @@
 								<p>Experience exceptional value with retreats designed to be accessible to all.</p>
 							</div>
 						</div>
-						<div class="feature-item d-flex align-items-center mb-5 wow slideInRight" data-wow-delay="0.3s" style="margin-left: 40px;">
+						<div class="feature-item d-flex align-items-center mb-5" style="margin-left: 40px;">
 							<div class="feature-icon hover-zoom">
 								<div class="circle-icon">
 									<i class="fas fas fa-spa"></i>
@@ -270,7 +270,7 @@
 								<p>Small group sizes ensure focused guidance and a meaningful connection with instructors.</p>
 							</div>
 						</div>
-						<div class="feature-item d-flex align-items-center wow slideInRight" data-wow-delay="0.4s">
+						<div class="feature-item d-flex align-items-center">
 							<div class="feature-icon hover-zoom">
 								<div class="circle-icon">
 									<i class="fas fas fa-spa"></i>
