--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 							<span class="fw-bold">Through Yoga</span>
 						</h1>
 						<p class="text-justify lh-1-75 p-2 mb-md-4 animated zoomIn">
-							Achieve harmony and inner peace by integrating yoga into your daily routine. 
-						</p>
+							Achieve harmony and inner peace by integrating yoga into your daily routine. Discover a renewed sense of well-being through our guided sessions. Experience the profound effects of mindful breathing, meditation, and physical postures that nurture your body and soul. Begin your journey towards a healthier, balanced, and more fulfilling life today.
+						</p>						
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
 							<a href="about.html" class="btn hover-fill btn-outline-light theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
 							<a href="contact.html" class="btn hover-fill theme-design btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
@@ -131,8 +131,8 @@
 					<div class="carousel-caption d-flex flex-column justify-content-center align-items-start"> <!-- Updated alignment classes -->
 						<h1 class="text-uppercase ls-1 mb-3 animated slideInDown">Find Peace<br><span class="fw-bold">Through Yoga</span></h1>
 						<p class="text-justify lh-1-75 p-2 mb-md-4 animated zoomIn">
-							Experience the calming power of yoga and bring serenity to your mind.
-						</p>
+							Experience the calming power of yoga and bring serenity to your mind. Find tranquility through our personalized practices that connect you to the deeper aspects of yourself. Relieve stress and cultivate inner strength with every breath, every movement. Let us guide you towards a peaceful state of being and emotional clarity.
+						</p>						
 						<div class="d-flex flex-row"> <!-- Wrapper to keep buttons side by side -->
 							<a href="about.html" class="btn hover-fill btn-outline-light theme-design py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
 							<a href="contact.html" class="btn hover-fill theme-design btn-outline-light py-md-3 px-md-5 animated slideInRight">Contact Us</a>
@@ -159,7 +159,7 @@
         background-repeat: no-repeat, no-repeat; ">
 			<div class="container about-section">
 				<div class="row align-items-center">
-					<div class="col-lg-5 mb-5">
+					<div class="col-lg-5 mb-2 offset-lg-1">
 						<div class="about-image-wrapper position-relative">
 							<div class="background-shape theme-design"></div>
 							<div class="about-image theme-design">
@@ -167,11 +167,12 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-7 mb-5">
+					<div class="col-lg-5 mb-2">
 						<div class="about-content">
-							<h2 class="mb-4">Himalayan Yoga Retreat</h2>
-							<p class="mb-4 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.</p>
-							<p class="mb-4 text-justify">Nestled along the sacred banks of the Ganges River, our retreat is set amidst the serene beauty and spiritual energy of the Himalayas. This peaceful environment provides the perfect backdrop for awakening your inner strength and achieving personal growth. Join us at Himalayan Yoga Retreat and begin your journey towards inner peace and holistic well-being.</p>
+							<h2 class="mb-4">Who We Are</h2>
+							<p class="mb-2 text-justify">At Himalayan Yoga Retreat, we invite you to embark on a transformative journey of self-discovery in the heart of Rishikesh, the "Yoga Capital of the World." Our retreat offers a unique opportunity to experience the profound physical, emotional, mental, and spiritual benefits of yoga. Guided by experienced instructors, you will deepen your practice with enriching asanas, pranayama, yoga Nidra, and cleansing yogic purification techniques, all while exploring various meditation methods.
+							Nestled along the sacred banks of the Ganges River, our retreat is set amidst the serene beauty and spiritual energy of the Himalayas. This peaceful environment provides the perfect backdrop for awakening your inner strength and achieving personal growth.
+							</p>
 							<a href="#" class="btn hover-fill btn-theme theme-design py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Read More</a>
 						</div>
 					</div>
@@ -180,7 +181,7 @@
 		</div>
 
 		<!-- Features Section -->
-		<div class="container-fluid py-5 bg-light features wow fadeInUp" data-wow-delay="0.1s">
+		<div class="container-fluid py-5 bg-light features wow slideInUp" data-wow-delay="0.1s">
 			<div class="container py-5 position-relative">
 				<div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
 					<h5 class="fw-bold text-theme text-uppercase">Why Choose Us</h5>
@@ -234,7 +235,7 @@
 						</div>
 					</div>
 					<div class="col-lg-4 text-center position-relative">
-						<img src="images/feature.jpg" alt="Yoga Center" class="img-fluid center-image wow fadeIn" data-wow-delay="0.3s">
+						<img src="images/feature.jpg" alt="Yoga Center" class="img-fluid center-image">
 					</div>
 					<div class="col-lg-4">
 						<div class="feature-item d-flex align-items-center mb-5">
