--- a/index.html
+++ b/index.html
@@ -825,19 +825,19 @@
 					</div>
 					<!-- Quick Links -->
 					<div class="link-animated col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-						<h5 class="text-uppercase mb-4 font-weight-bold">Quick Links</h5>
-						<p><a href="#" class="text-dark mb-0">Home</a></p>
-						<p><a href="#" class="text-dark mb-0">About Us</a></p>
-						<p><a href="#" class="text-dark mb-0">Services</a></p>
-						<p><a href="#" class="text-dark mb-0">Team</a></p>
-						<p><a href="#" class="text-dark mb-0">Contact Us</a></p>
+						<h5 class="text-start text-uppercase mb-4 font-weight-bold">Quick Links</h5>
+						<p class="text-start"><a href="#" class="text-dark mb-0">Home</a></p>
+						<p class="text-start"><a href="#" class="text-dark mb-0">About Us</a></p>
+						<p class="text-start"><a href="#" class="text-dark mb-0">Services</a></p>
+						<p class="text-start"><a href="#" class="text-dark mb-0">Team</a></p>
+						<p class="text-start"><a href="#" class="text-dark mb-0">Contact Us</a></p>
 					</div>
 					<!-- Contact Info -->
 					<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-						<h5 class="text-uppercase mb-4 font-weight-bold">Contact Info</h5>
-						<p><i class="fas fa-map-marker-alt me-3"></i><a class="text-dark mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
-						<p><i class="fas fa-envelope me-3"></i><a class="text-dark mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
-						<p><i class="fas fa-phone me-3"></i><a class="text-dark mb-0" href="tel:+919084359144">+919084359144</a></p>
+						<h5 class="text-start text-uppercase mb-4 font-weight-bold">Contact Info</h5>
+						<p class="text-start"><i class="fas fa-map-marker-alt me-3"></i><a class="text-dark mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
+						<p class="text-start"><i class="fas fa-envelope me-3"></i><a class="text-dark mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
+						<p class="text-start"><i class="fas fa-phone me-3"></i><a class="text-dark mb-0" href="tel:+919084359144">+919084359144</a></p>
 					</div>
 				</div>
 
