--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 							<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Locations</a>
 							<div class="dropdown-menu m-0">
 								<a href="#" class="dropdown-item">Rishikesh</a>
-								<a href="#" class="dropdown-item">Dehradun</a>
-								<a href="#" class="dropdown-item">Haridhwar</a>
+								<a href="#" class="dropdown-item">Chopta</a>
+								<a href="#" class="dropdown-item">Himalaya</a>
 							</div>
 						</div>
 						<a href="contact.html" class="nav-item nav-link">Contact Us</a>
